--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
+    "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "font-awesome": "^4.7.0",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
